--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-  font-family: 'Inter Tight', system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Gill Sans", sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rebeccapurple;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -32,7 +32,7 @@ a:hover {
 }
 
 body {
-  background: #483d3f;
+  background-image: linear-gradient(rgb(239, 190, 190), rgb(243, 243, 208));
   background-size: cover;
   background-repeat: no-repeat no-repeat;
   background-position: center center;
